tdf#118482 set a scroll step of the height of a collapsed entry

Change-Id: I09ea056f6c2284afda5b387b6fdff3160bb7adc2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/112625
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>